<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/appointment_title"

            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/atitle"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appointment_message"

            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:text="@string/amessage"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/appointment_name"

            android:hint="@string/aname"
            android:inputType="textCapWords"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="8dp"
            android:scrollbars="horizontal" />

        <EditText
            android:id="@+id/appointment_location"

            android:hint="@string/alocation"
            android:inputType="textCapWords"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="8dp"
            android:scrollbars="horizontal"
            android:nextFocusDown="@id/appointment_DD"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/appointment_DD"

            android:hint="@string/DD"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="45dp"
            android:paddingLeft="8dp"
            android:maxLength="2"
            android:nextFocusDown="@id/appointment_MM"/>

        <EditText
            android:id="@+id/appointment_MM"

            android:hint="@string/MM"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="49dp"
            android:paddingLeft="8dp"
            android:maxLength="2"
            android:nextFocusDown="@id/appointment_YYYY"/>

        <EditText
            android:id="@+id/appointment_YYYY"

            android:hint="@string/YYYY"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="65dp"
            android:paddingLeft="8dp"
            android:maxLength="4"
            android:nextFocusDown="@id/appointment_hour"/>

        <!-- used for format error reporting across date fields -->
        <EditText
            android:id="@+id/date_error"
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/appointment_hour"

            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:hint="@string/ahour"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:nextFocusDown="@id/appointment_min"/>

        <EditText
            android:id="@+id/appointment_min"

            android:hint="@string/amin"
            android:inputType="number"
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:paddingLeft="8dp"
            android:nextFocusDown="@id/appointment_notes"/>

        <!-- used for format error reporting across time fields -->
        <EditText
            android:id="@+id/time_error"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/appointment_notes"

            android:hint="@string/anotes"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lines="2"
            android:paddingLeft="8dp"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/app_message2"

            android:text="@string/amessage2"
            android:textColor="#545454"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="2dp" />

    </LinearLayout>

</LinearLayout>