...
    <string name="medication">Medication</string>
    <string name="calendar">Calendar</string>
    <string name="appointments">Appointments</string>
    <string name="measurements">Measurements</string>

    // Settings and Details strings
    <string name="edit_icon">Edit Icon</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>

    // Calendar strings
    <string name="last_date_arrow">Last Date Arrow</string>
    <string name="next_date_arrow">Next Date Arrow</string>
...
        Dr M G Shaikh\n
        Dr A Mason\n
        Dr J Wong
    </string>

    // Appointment strings
    <string name="atitle">Add an Appointment</string>
    <string name="amessage">Enter the details for your new appointment:</string>
    <string name="aname">Appointment Title</string>
    <string name="alocation">Location</string>
    <string name="ahour">HH</string>
    <string name="amin">MM</string>
    <string name="apptime">Time</string>
...
